--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "nodemon": "^2.0.16",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.3.1",
     "sass": "^1.51.0",
     "sass-loader": "^12.6.0"
   },
